--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </ul>
         </nav>
         <div class="header__contact">
-          <a href="tel:+380441111111" class="header__tel link"
+          <a href="tel:+380441111111" class="header__tel header__link--active link"
             >+38 044 111 11 11</a
           >
           <button
@@ -204,7 +204,7 @@
               </li>
             </ul>
           </div>
-          <button class="prices__button" type="button">online-booking</button>
+          <button class="prices__button header__button--active" type="button">online-booking</button>
         </div>
       </section>
       <section class="slogan">
@@ -502,7 +502,7 @@
                 name="massage"
                 placeholder="Message"
               ></textarea>
-              <button type="button" class="form__button">send</button>
+              <button type="button" class="form__button header__button--active">send</button>
             </form>
           </section>
           <section class="address">
