--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a
                   href=""
                   rel="noopener noreferrer nofollow"
-                  class="hero__link hero__link--active link"
+                  class="hero__link active link"
                   >Instagram</a
                 >
               </li>
@@ -69,7 +69,7 @@
                 <a
                   href=""
                   rel="noopener noreferrer nofollow"
-                  class="hero__link hero__link--active link"
+                  class="hero__link active link"
                   >Youtube</a
                 >
               </li>
@@ -261,40 +261,28 @@
               <p class="barbers__text">Extreme Barber</p>
               <ul class="barbers__soc-list list">
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -324,40 +312,28 @@
               <p class="barbers__text">Extreme Barber</p>
               <ul class="barbers__soc-list list">
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -387,40 +363,28 @@
               <p class="barbers__text">Extreme Barber</p>
               <ul class="barbers__soc-list list">
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="barbers__soc-items barbers__soc-items--pseudo">
-                  <a
-                    href=""
-                    class="barber__soc-link barber__soc-link--active link"
-                  >
+                  <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -495,9 +459,7 @@
                 name="massage"
                 placeholder="Message"
               ></textarea>
-              <button type="button" class="form__button bg__btn">
-                send
-              </button>
+              <button type="button" class="form__button bg__btn">send</button>
             </form>
           </section>
           <section class="address">
@@ -506,7 +468,7 @@
               <ul class="contacts__list list">
                 <li class="contacts__item contacts__item--pseudo item">
                   <a
-                    class="contacts__address link"
+                    class="contacts__address active link"
                     href="https://goo.gl/maps/SqjWdAGcujGYJVh9A"
                     rel="noopener noreferrer nofollow"
                     >st. Vasilkovaya, 7A <br />
@@ -514,13 +476,13 @@
                   </a>
                 </li>
                 <li class="contacts__item contacts__item--pseudo item">
-                  <a class="contacts__tel link" href="tel:+380441111111"
+                  <a class="contacts__tel active link" href="tel:+380441111111"
                     >+38 044 111 11 11</a
                   >
                 </li>
                 <li class="contacts__item contacts__item--pseudo item">
                   <a
-                    class="contacts__mail link"
+                    class="contacts__mail active link"
                     href="mailto:barbershop@email.com"
                     >barbershop@email.com</a
                   >
@@ -540,7 +502,7 @@
           <ul class="footer__list footer__list--static list">
             <li class="footer__item footer__item--pseudo item">
               <a
-                class="footer__link footer__link--active"
+                class="footer__link active"
                 href=""
                 rel="noopener noreferrer nofollow"
                 >Instagram</a
@@ -548,7 +510,7 @@
             </li>
             <li class="footer__item footer__item--pseudo item">
               <a
-                class="footer__link footer__link--active"
+                class="footer__link active"
                 href=""
                 rel="noopener noreferrer nofollow"
                 >Youtube</a
