--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="hero">
         <div class="hero__container container">
           <div class="hero__wrapper">
-            <ul class="hero__list hero__list--static list">
+            <ul class="hero__list list">
               <li class="hero__item item">
                 <a
                   href=""
@@ -90,14 +90,14 @@
       <section class="about">
         <div class="about__container container">
           <ul class="about__list list">
-            <li class="about__item about__item--pseudo item">
+            <li class="about__item item">
               <img
                 src="./images/shaving1.jpg"
                 alt="barber shaving"
                 width="270"
               />
             </li>
-            <li class="about__item about__item--pseudo item">
+            <li class="about__item item">
               <img
                 src="./images/shaving2.jpg"
                 alt="barber cuts hair"
@@ -119,9 +119,7 @@
               always "on the same wave" with clients. Therefore, we are always
               ready to improve everyone who comes to us!
             </p>
-            <button type="button" class="about__button about__button--active">
-              ONLINE-BOOKING
-            </button>
+            <button type="button" class="about__button">ONLINE-BOOKING</button>
           </div>
         </div>
       </section>
@@ -133,65 +131,39 @@
           <h2 class="prices__title">Services and prices</h2>
           <div class="prices__list-wrap">
             <ul class="prices__list-left prices__list list">
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">Men’s haircut</p>
-                <p class="prices__elem prices__elem--pseudo">from 300 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Men’s haircut</p>
+                <p class="prices__elem">from 300 uah.</p>
               </li>
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">Beard trim</p>
-                <p class="prices__elem prices__elem--pseudo">from 300 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Beard trim</p>
+                <p class="prices__elem">from 300 uah.</p>
               </li>
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">Mustache trim</p>
-                <p class="prices__elem prices__elem--pseudo">from 200 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Mustache trim</p>
+                <p class="prices__elem">from 200 uah.</p>
               </li>
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">
-                  Straight razor shave
-                </p>
-                <p class="prices__elem prices__elem--pseudo">from 200 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Straight razor shave</p>
+                <p class="prices__elem">from 200 uah.</p>
               </li>
             </ul>
             <ul class="prices__list-right prices__list list">
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">
-                  Trainee’s haircut
-                </p>
-                <p class="prices__elem prices__elem--pseudo">from 50 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Trainee’s haircut</p>
+                <p class="prices__elem">from 50 uah.</p>
               </li>
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">
-                  Haircut under the nozzle
-                </p>
-                <p class="prices__elem prices__elem--pseudo">from 200 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Haircut under the nozzle</p>
+                <p class="prices__elem">from 200 uah.</p>
               </li>
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">
-                  Children’s haircut (0-12 y.o.)
-                </p>
-                <p class="prices__elem prices__elem--pseudo">from 300 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Children’s haircut (0-12 y.o.)</p>
+                <p class="prices__elem">from 300 uah.</p>
               </li>
-              <li
-                class="prices__item prices__item--static prices__item--pseudo item"
-              >
-                <p class="prices__elem prices__elem--pseudo">
-                  Camouflage of gray hair
-                </p>
-                <p class="prices__elem prices__elem--pseudo">from 200 uah.</p>
+              <li class="prices__item item">
+                <p class="prices__elem">Camouflage of gray hair</p>
+                <p class="prices__elem">from 200 uah.</p>
               </li>
             </ul>
           </div>
@@ -204,20 +176,20 @@
         <div class="slogan__container container">
           <div class="slogan__wrapper">
             <ul class="slogan__list list">
-              <li class="slogan__item slogan__item--pseudo item">
-                <span class="slogan__numbers slogan__numbers--static">600</span>
+              <li class="slogan__item item">
+                <span class="slogan__numbers">600</span>
                 <p class="slogan__text">Satisfied customers per day</p>
               </li>
-              <li class="slogan__item slogan__item--pseudo item">
-                <span class="slogan__numbers slogan__numbers--static">50</span>
+              <li class="slogan__item item">
+                <span class="slogan__numbers">50</span>
                 <p class="slogan__text">Awards for excellent service</p>
               </li>
-              <li class="slogan__item slogan__item--pseudo item">
-                <span class="slogan__numbers slogan__numbers--static">20</span>
+              <li class="slogan__item item">
+                <span class="slogan__numbers">20</span>
                 <p class="slogan__text">Kyiv’s best barbers</p>
               </li>
-              <li class="slogan__item slogan__item--pseudo item">
-                <span class="slogan__numbers slogan__numbers--static">100</span>
+              <li class="slogan__item item">
+                <span class="slogan__numbers">100</span>
                 <p class="slogan__text">Gifts for regular customers</p>
               </li>
             </ul>
@@ -239,7 +211,7 @@
           </p>
           <h2 class="barbers__title">Our barbers</h2>
           <ul class="barbers__list list">
-            <li class="barbers__item barbers__item--pseudo item">
+            <li class="barbers__item item">
               <a href="##" class="barbers__link barbers__link--active">
                 <div class="barbers__thumb">
                   <img
@@ -260,28 +232,28 @@
               <h3 class="barbers__name">John Smith</h3>
               <p class="barbers__text">Extreme Barber</p>
               <ul class="barbers__soc-list list">
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-linkedin"></use>
@@ -290,7 +262,7 @@
                 </li>
               </ul>
             </li>
-            <li class="barbers__item barbers__item--pseudo item">
+            <li class="barbers__item item">
               <a href="##" class="barbers__link barbers__link--active">
                 <div class="barbers__thumb">
                   <img
@@ -311,28 +283,28 @@
               <h3 class="barbers__name">Michele Doe</h3>
               <p class="barbers__text">Extreme Barber</p>
               <ul class="barbers__soc-list list">
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-linkedin"></use>
@@ -341,7 +313,7 @@
                 </li>
               </ul>
             </li>
-            <li class="barbers__item barbers__item--pseudo item">
+            <li class="barbers__item item">
               <a href="##" class="barbers__link barbers__link--active">
                 <div class="barbers__thumb">
                   <img
@@ -362,28 +334,28 @@
               <h3 class="barbers__name">Alan Black</h3>
               <p class="barbers__text">Extreme Barber</p>
               <ul class="barbers__soc-list list">
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="barbers__soc-items barbers__soc-items--pseudo">
+                <li class="barbers__soc-items">
                   <a href="" class="barber__soc-link active link">
                     <svg width="20" height="20" class="barbers__soc-icons">
                       <use href="./images/icons.svg#icon-linkedin"></use>
@@ -395,12 +367,14 @@
           </ul>
         </div>
       </section>
+
+      <!-- gallery  -->
       <section class="gallery">
         <div class="gallery__container container">
           <h2 class="gallery__visually-hidden">Gallery</h2>
           <p class="gallery__text pre-title">In Latin, "barba" means "beard"</p>
           <ul class="gallery__list list">
-            <li class="gallery__item gallery__item--pseudo item">
+            <li class="gallery__item item">
               <img
                 class="gallery__img"
                 src="./images/working-process1.jpg"
@@ -408,7 +382,7 @@
                 width="270"
               />
             </li>
-            <li class="gallery__item gallery__item--pseudo item">
+            <li class="gallery__item item">
               <img class="gallery__item item" />
               <img
                 class="gallery__img"
@@ -417,7 +391,7 @@
                 width="270"
               />
             </li>
-            <li class="gallery__item gallery__item--pseudo item">
+            <li class="gallery__item item">
               <img class="gallery-item item" />
               <img
                 class="gallery__img"
@@ -426,7 +400,7 @@
                 width="270"
               />
             </li>
-            <li class="gallery__item gallery__item--pseudo item">
+            <li class="gallery__item item">
               <img
                 class="gallery__img"
                 src="./images/working-process4.jpg"
@@ -439,34 +413,40 @@
       </section>
       <div class="block-wrapper">
         <div class="block-wrapper__container container">
+          <!-- booking -->
           <section class="booking">
             <h2 class="booking__title">Online-booking</h2>
+
+            <!-- form -->
             <form action="" class="form">
               <input
-                class="form__input form__input--pseudo form__styles form__styles--active"
+                class="form__input form__styles"
                 type="text"
                 name="name"
                 placeholder="Name*"
               />
               <input
-                class="form__input form__input--pseudo form__styles form__styles--active"
+                class="form__input form__styles"
                 type="tel"
                 name="phone"
                 placeholder="Phone*"
               />
               <textarea
-                class="form__textarea form__styles form__styles--active"
+                class="form__textarea form__styles"
                 name="massage"
                 placeholder="Message"
               ></textarea>
               <button type="button" class="form__button bg__btn">send</button>
             </form>
           </section>
+
+          <!-- adress -->
+
           <section class="address">
             <h2 class="address__title">Contacts</h2>
             <address class="contacts">
               <ul class="contacts__list list">
-                <li class="contacts__item contacts__item--pseudo item">
+                <li class="contacts__item item">
                   <a
                     class="contacts__address active link"
                     href="https://goo.gl/maps/SqjWdAGcujGYJVh9A"
@@ -475,12 +455,12 @@
                     Kiev, 08132
                   </a>
                 </li>
-                <li class="contacts__item contacts__item--pseudo item">
+                <li class="contacts__item item">
                   <a class="contacts__tel active link" href="tel:+380441111111"
                     >+38 044 111 11 11</a
                   >
                 </li>
-                <li class="contacts__item contacts__item--pseudo item">
+                <li class="contacts__item item">
                   <a
                     class="contacts__mail active link"
                     href="mailto:barbershop@email.com"
@@ -495,12 +475,14 @@
         </div>
       </div>
     </main>
+
+    <!-- footer -->
     <footer class="footer">
       <div class="footer__container container">
         <p class="footer__copyright">&#169; Copyright 2020</p>
         <div class="footer__wrapper">
-          <ul class="footer__list footer__list--static list">
-            <li class="footer__item footer__item--pseudo item">
+          <ul class="footer__list list">
+            <li class="footer__item item">
               <a
                 class="footer__link active"
                 href=""
@@ -508,7 +490,7 @@
                 >Instagram</a
               >
             </li>
-            <li class="footer__item footer__item--pseudo item">
+            <li class="footer__item item">
               <a
                 class="footer__link active"
                 href=""
